APM-159684 fix(switch, radio, checkbox): Fixes issue where styling of switch, radio and checkbox was not aligned

--- a/src/barista-examples/main.scss
+++ b/src/barista-examples/main.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .dark {
-  background-color: #2d2d2d;
+  background-color: #242424;
   color: #fff;
   padding: 16px;
 }
